# industryiq

./: .dockerignore  .env.example  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  README.md  compose.prod.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  judge.py  metrics.py  queries.json  run_benchmark.py  run_chat_benchmark.py
benchmarks/docling_vs_pypdf/: README.md  aiindex_p65-66.docling.md  aiindex_p65-66.pypdf.txt  bench_pdf.py  sia_p21-23.docling.md  sia_p21-23.pypdf.txt
docs/adr/: 0001-modular-monolith-over-microservices.md
frontend/: .env.example  README.md  index.html  package-lock.json
frontend/src/: App.css  App.tsx  api.ts  index.css
infra/: README.md  app.py
infra/industryiq_infra/: industryiq_stack.py
scripts/: _diag.py  ingest_bulk.py  migrate_pg_to_milvus.py  start.ps1
src/industryiq/: config.py
src/industryiq/api/: admin_routes.py  app.py  auth_routes.py  chat_routes.py  debug_routes.py  deps.py  file_loading.py  security.py
src/industryiq/core/: anthropic_llm.py  bedrock.py  chunking.py  generation.py  loaders.py  local_embeddings.py  milvusvectorstore.py  pgvectorstore.py  pipeline.py  retrieval.py  vectorstore.py
src/industryiq/core/auth/: __init__.py  ports.py  service.py
src/industryiq/core/auth/adapters/: store_pg.py  (+1 more)
src/industryiq/core/chat/: __init__.py  models.py  ports.py  prompting.py  service.py
src/industryiq/core/ingestion/: __init__.py  manifest.py  models.py  ports.py  scheduler.py  service.py
src/ragproject/: config.py
src/ragproject/api/: app.py  chat_routes.py  debug_routes.py  deps.py  rag_routes.py  security.py
src/ragproject/core/: anthropic_llm.py  bedrock.py  chunking.py  embeddings.py  generation.py  loaders.py  local_embeddings.py  pgvectorstore.py  pipeline.py  retrieval.py  vectorstore.py
src/ragproject/core/chat/: __init__.py  models.py  ports.py  prompting.py  service.py  store_memory.py  store_pg.py  timing.py
tests/: conftest.py  test_api.py  test_auth_api.py  test_auth_passwords.py  test_auth_service.py  test_auth_store_memory.py  test_auth_tokens.py  test_chat_api.py  test_chat_deps.py  test_chat_filtering.py  test_chat_prompting.py  test_chat_rewriting.py  test_chat_routing.py  test_chat_service.py  test_chat_session_documents.py  test_chat_store_memory.py  test_chat_timing.py  test_chunking.py  test_config.py  test_embeddings.py  test_generation.py  test_ingest_admin_api.py  test_ingest_manifest.py  test_ingest_scheduler.py  test_ingest_state_store_memory.py  test_ingestion_service.py  test_loaders.py  test_loaders_docling.py  test_local_embeddings_integration.py  test_milvusvectorstore_integration.py  test_pg_conversation_store_integration.py  test_pg_ingest_state_store_integration.py  test_pgvectorstore_integration.py  test_pipeline.py  test_retrieval.py  test_vectorstore.py  test_version.py
tests/fixtures/: sample.docx
(+17 files in other folders)
