[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragproject"
version = "0.0.1"
description = "A modular, testable RAG system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-cov", "pre-commit", "httpx"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # errors, pyflakes, import-sort, pyupgrade, bugbear

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
# python-docx ships no type stubs; don't fail on its untyped imports.
module = ["docx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=ragproject --cov-report=term-missing"
markers = ["integration: tests that need real services (deselect with -m 'not integration')"]
filterwarnings = [
    # Third-party deprecation from Starlette's TestClient; not our code.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
